--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.510.0",
-    "next": "^15.5.0",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "openai": "^5.23.1",
     "opentok": "^2.21.2",
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.56.3",
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.3",
+    "svix": "^1.82.0",
     "tailwind-merge": "^3.3.0",
     "uploadthing": "^7.7.4",
     "zod": "^3.24.4"
@@ -55,7 +56,7 @@
     "@types/react": "19.1.15",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "^15.5.7",
     "postcss": "^8.5.3",
     "prisma": "^6.8.2",
     "tailwindcss": "^4.1.7",
