--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.32",
     "@ai-sdk/openai": "^2.0.42",
     "@ai-sdk/react": "^2.0.59",
     "@clerk/nextjs": "^6.19.3",
@@ -43,6 +44,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "react-markdown": "^10.1.0",
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.3",
     "svix": "^1.82.0",
