--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vonage/server-sdk": "^3.21.0",
     "@vonage/video": "^1.23.0",
     "ai": "^5.0.59",
+    "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
