--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.56.3",
     "react-markdown": "^10.1.0",
     "react-spinners": "^0.17.0",
+    "resend": "^6.7.0",
     "sonner": "^2.0.3",
     "svix": "^1.82.0",
     "tailwind-merge": "^3.3.0",
